--- a/lab2/styles.css
+++ b/lab2/styles.css
@@ -5,3 +5,9 @@ h1{
 .label{
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+.legend2{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-style: italic;
+    font-size: .75em;
+}
