--- a/lab3/styles.css
+++ b/lab3/styles.css
@@ -1,3 +1,7 @@
 #scatterplot_1{
     background-image: url(./image1_transparent.png);
 }
+
+#scatterplot_2{
+    background-image: url(./image1_transparent.png);
+}
