--- a/lab3/styles.css
+++ b/lab3/styles.css
@@ -3,5 +3,9 @@
 }
 
 #scatterplot_2{
-    background-image: url(./image1_transparent.png);
+    background-image: url(./image2_transparent.png);
+}
+
+#scatterplot_3{
+    background-image: url(./image3_transparent.png);
 }
